fix: fixed #1791 Virtual Keyboard: keycap 'aside' labels don't respect CSS Dark Mode #1791

--- a/css/virtual-keyboard.less
+++ b/css/virtual-keyboard.less
@@ -625,7 +625,7 @@
             font-weight: 100;
           }
           small {
-            color: #555;
+            color: var(--keycap-secondary-text);
             @media only screen and (max-width: 767px) {
               font-size: 9px;
             }
@@ -634,7 +634,7 @@
             font-family: @system;
             font-size: 10px;
             line-height: 10px;
-            color: #666;
+            color: var(--keycap-secondary-text);
             /* On small screens, don't display */
             @media only screen and (max-width: 767px) {
               display: none;
